# authuser

./: README.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
authuser/: AUTHORS  Makefile  Makefile.am  Makefile.in  aclocal.m4  config.h  config.status  configure  configure.ac  libtool
authuser/autom4te.cache/: output.0  output.1  requests  traces.0  traces.1
authuser/po/: Makefile  Makefile.in
authuser/src/: Makefile  Makefile.am  Makefile.in  authuser-0.1.pc  authuser-0.1.pc.in  authuser.h  lib.c  lib.lo  libauthuser.la
authuser/src/.deps/: lib.Plo
authuser/src/.libs/: libauthuser.la  libauthuser.lai  libauthuser.so.0  libauthuser.so.0.0.0
docs/source/: conf.py
